@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-chroot.sh,v 1.19 2005/11/29 20:15:48 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-chroot.sh,v 1.20 2005/12/07 21:33:43 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 
@@ -15,6 +15,7 @@ setup_myemergeopts
 
 export FEATURES="${clst_myfeatures}"
 export CONFIG_PROTECT="-*"
+export EMERGE_WARNING_DELAY=0
 
 ## START BUILD
 setup_portage
