@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage3/Attic/stage3-chroot.sh,v 1.22 2005/07/07 22:19:08 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage3/Attic/stage3-chroot.sh,v 1.23 2005/12/07 21:33:43 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 check_portage_version
@@ -16,7 +16,7 @@ setup_myemergeopts
 export FEATURES="${clst_myfeatures}"
 export CONFIG_PROTECT="-*"
 export USE="${USE} ${clst_HOSTUSE}"
-
+export EMERGE_WARNING_DELAY=0
 
 ## START BUILD
 # portage needs to be merged manually with USE="build" set to avoid frying our
