@@ -1,5 +1,11 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.430 2005/12/07 21:01:35 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.431 2005/12/07 21:33:43 wolf31o2 Exp $
+
+  07 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/livecd-stage1/livecd-stage1-chroot.sh,
+  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
+  targets/stage3/stage3-chroot.sh, targets/stage4/stage4-chroot.sh:
+  Made EMERGE_WARNING_DELAY=0 for all stages.  This is 2.0_rc7.
 
   07 Dec 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py, modules/generic_target.py:
